# smartgrids2cluster

./: Makefile  README.md  generate.py  pyproject.toml
results/: area_antioquia.joblib  area_caribe.joblib  area_nordeste.joblib  cens.joblib  ceo.joblib  xm.joblib
scripts/: test.py  train.py
smartgrids2cluster/: datamodels.py  io.py  preprocess.py  train.py  utils.py  visualise.py
