[tool.poetry]
name = "smartgrids2cluster"
version = "0.1.0"
description = ""
authors = ["Juan Lara <julara@unal.edu.co>"]

[tool.poetry.dependencies]
python = ">=3.7.1,<3.11"
numpy = "^1.21.2"
pandas = "^1.3.3"
sklearn = "^0.0"
pyarrow = "^5.0.0"
pydantic = "^1.8.2"
dask = {extras = ["distributed"], version = "^2021.9.1"}
bokeh = "^2.4.0"
openpyxl = "^3.0.9"
Unidecode = "^1.3.2"
holidays = "^0.11.3"
matplotlib = "^3.4.3"

[tool.poetry.dev-dependencies]
neovim = "^0.3.1"
ipython = "^7.28.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
